@@ -158,8 +158,8 @@ public class ResourceResolverBean implements ResourceResolver {
         resource.setLookedUp(true);
         for (String accessorString : datasourceMappers) {
           logger.debug("Looking up datasource adapter: {}", accessorString);
-          DatasourceAccessor accessor =
-              (DatasourceAccessor) Class.forName(accessorString).newInstance();
+          DatasourceAccessor accessor = (DatasourceAccessor) Class.forName(accessorString)
+              .getDeclaredConstructor().newInstance();
           dataSourceInfo = accessor.getInfo(obj);
           if (dataSourceInfo != null) {
             break;
@@ -194,8 +194,8 @@ public class ResourceResolverBean implements ResourceResolver {
       try {
         for (String accessorString : datasourceMappers) {
           logger.debug("Resetting datasource adapter: {}", accessorString);
-          DatasourceAccessor accessor =
-              (DatasourceAccessor) Class.forName(accessorString).newInstance();
+          DatasourceAccessor accessor = (DatasourceAccessor) Class.forName(accessorString)
+              .getDeclaredConstructor().newInstance();
           if (accessor.reset(obj)) {
             return true;
           }
